# Customer-Churn-Prediction

./: .gitignore  Customer_Churn_Prediction_Report.docx  README.md  build-plan.md  predict.py  pyproject.toml  requirements.txt  run.py  start.bat  test_api.py  test_ui.py  train.py  ~$stomer_Churn_Prediction_Report.docx
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: X_test.parquet  X_train.parquet  y_test.parquet  y_train.parquet
models/: feature_cols.pkl  logistic_regression.pkl  xgboost.pkl
notebooks/: 01-eda.ipynb  02-preprocessing-feature-engineering.ipynb  03-model-training-tuning.ipynb  04-api.ipynb  executed_02.ipynb
templates/: index.html
